# aiagent-example-py

./: Makefile  README.md  compose.yaml
docker/postgres/sqls/: init.sql
llamaindex-cli/: .env.dev  .env.example  .flake8  .gitignore  .mypy.ini  Makefile  README.md  pyproject.toml
llamaindex-cli/src/agents/: agents.py  ai_tools.py  workflow.py
llamaindex-cli/src/cli/: main.py
llamaindex-cli/src/entities/: __init__.py  ai_tools.py
llamaindex-cli/src/infrastructure/documents/: document.py  github.py  utils.py
llamaindex-cli/src/infrastructure/llm/: models.py
llamaindex-cli/src/infrastructure/storages/: document.py  github.py  utils.py
llamaindex-cli/src/interfaces/: __init__.py
llamaindex-cli/src/llm/: models.py
llamaindex-cli/src/openai/: client.py
llamaindex-cli/src/registry/: registry.py
llamaindex-cli/src/use_cases/: any_question.py  check_docs_agent.py  custom_agent.py  github_index.py  multi_agent.py  query_docs.py  query_image.py  tech_question.py  tool.py
llamaindex-cli/storage/: tech-news01.txt
openai-agents-cli/: .env.dev  .env.example  .gitignore  .mypy.ini  Makefile  README.md  pyproject.toml
openai-agents-cli/src/cli/: main.py
openai-agents-cli/src/embedding/: embedding.py
openai-agents-cli/src/entities/: embedding.py
openai-agents-cli/src/entities/embedding/: types.py  utils.py
openai-agents-cli/src/entities/prompt/: templates.py
openai-agents-cli/src/infrastructure/openai_api/: client.py  dymmy.py  interface.py
openai-agents-cli/src/infrastructure/pgvector/: client.py  conn.py
openai-agents-cli/src/infrastructure/repository/: documents.py  embedding.py  interface.py
openai-agents-cli/src/infrastructure/vectordb/pgvector/: client.py
openai-agents-cli/src/infrastructure/web_browser/: interface.py  tavily_client.py
openai-agents-cli/src/openai_custom/: client.py  dymmy.py  interface.py
openai-agents-cli/src/registry/: registry.py
openai-agents-cli/src/use_cases/: check_docs_agent.py  custom_agent.py  debug.py  load_embedding.py  prompting.py  query_agent.py  search_db_agent.py  web_search_agent.py
openai-agents-cli/storage/: embedding01.json  embedding_all.txt
pydantic-cli/: .isort.cfg  .mypy.ini  Makefile  README.md  pyproject.toml
pydantic-cli/src/cli/: main.py
pydantic-cli/src/entities/: customer_details.py  entity.py  order.py  response_model.py
pydantic-cli/src/infrastructure/: infrastructure.py  model.py
pydantic-cli/src/interfaces/: interface.py
pydantic-cli/src/use_cases/: agent_structured_dependencies.py  agent_structured_response.py  agent_with_self_correction.py  agent_with_tools.py  simple_agent.py  use_case.py
pydantic-cli/src/utils/: markdown.py
rig-rs-cli/: .gitignore  Cargo.toml  Makefile  README.md
rig-rs-cli/src/: args.rs  lib.rs  main.rs  openai.rs  registry.rs
rig-rs-cli/src/openais/: openai.rs
rig-rs-cli/src/usecases/: basic.rs  mod.rs  prompt.rs
