[project]
name = "llamaindex-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.6.1",
    "llama-index>=0.12.24",
    "llama-index-core>=0.12.24.post1",
    "llama-index-embeddings-fastembed>=0.3.1",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-lmstudio>=0.3.0",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-llms-openai>=0.3.25",
    "llama-index-readers-file>=0.4.7",
    "llama-index-readers-github>=0.6.0",
    "llama-index-tools-tavily-research>=0.3.0",
    "llama-index-tools-yahoo-finance>=0.3.0",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "loguru>=0.7.3",
    "openai>=1.66.3",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.13.3",
    "tavily-python>=0.5.4",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.10.0",
    "taskipy>=1.14.1",
]

#------------------------------------------------------------------------------
# ruff configuration
#------------------------------------------------------------------------------
[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D104",
    "E501",
    "ERA001",
    "FBT001",
    "FBT002",
    "FIX001",
    "FIX002",
    "ISC001",
    "T201",
    "TD001",
    "TD002",
    "TD003",
]
unfixable = ["F401", "F841"]
pydocstyle.convention = "google"
per-file-ignores = { "tests/**/*.py" = ["D", "S101", "N802", "ARG"] }

[tool.ruff.lint.pylint]
max-args = 6

#------------------------------------------------------------------------------
# tasks
#------------------------------------------------------------------------------
[tool.taskipy.tasks]
flake8 = "flake8 src"
mypy = "mypy src"
