[project]
name = "openai-agents-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "openai>=1.66.3",
    "openai-agents>=0.0.4",
    "pgvector>=0.4.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.10.0",
    "taskipy>=1.14.1",
]

#------------------------------------------------------------------------------
# ruff configuration
#------------------------------------------------------------------------------
[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D104", "ERA001", "FBT001", "FBT002", "ISC001", "T201"]
unfixable = ["F401", "F841"]
pydocstyle.convention = "google"
per-file-ignores = { "tests/**/*.py" = ["D", "S101", "N802", "ARG"] }

[tool.ruff.lint.pylint]
max-args = 6

#------------------------------------------------------------------------------
# tasks
#------------------------------------------------------------------------------
[tool.taskipy.tasks]
flake8 = "flake8 src"
